--- a/style.css
+++ b/style.css
@@ -80,6 +80,17 @@ main > h1 {
     color: #fff;
 }
 
+main > h2 {
+    padding-top: 20px;
+    font-family: Raleway;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    color:  rgba(255, 255, 255, 0.5);
+
+
+}
+
 
 
 
